datasets/dataset_txt/requests/requests_611.txt
nathrun commented on Jun 6, 2017
Hi,
I am not sure if I am just doing something stupid but I can't seem to install requests on my raspberry pi which is running raspbian.
Expected Result
Install requests for python
Actual Result
When trying to install i got this:
`Downloading/unpacking requests
Downloading requests-2.17.3.tar.gz (123Kb): 123Kb downloaded
Running setup.py egg_info for package requests
Traceback (most recent call last):
File "", line 14, in
File "/home/pi/build/requests/setup.py", line 52, in
exec(f.read(), about)
File "", line 14
cake = u'\u2728 \U0001f370 \u2728'
^
SyntaxError: invalid syntax
Complete output from command python setup.py egg_info:
Traceback (most recent call last):
File "", line 14, in
File "/home/pi/build/requests/setup.py", line 52, in
exec(f.read(), about)
File "", line 14
__cake__ = u'\u2728 \U0001f370 \u2728'

                                     ^
SyntaxError: invalid syntax
Command python setup.py egg_info failed with error code 1 in /home/pi/build/requests
Storing complete log in /home/pi/.pip/pip.log`
Reproduction Steps
pip-3.2 install requests
System Information
I am trying to install this on a Raspberry Pi 2 B+ running Rasbian.
python version 3.2.3